err/qeutil.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/qeutil'...
Compiling './lib/python3.5/site-packages/qeutil/__init__.py'...
***   File "./lib/python3.5/site-packages/qeutil/__init__.py", line 496
    print 'Launching:',
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/qeutil/analyzers.py'...
***   File "./lib/python3.5/site-packages/qeutil/analyzers.py", line 305
    print '# %s: V=%.2f A^3, Etot=%.3f eV, P=%6.1f GPa' % (n, V, Etot, P/GPa)
                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qeutil/qeio.py'...
***   File "./lib/python3.5/site-packages/qeutil/qeio.py", line 324
    print "etotal is           : %s " % str(Results['etotal'])
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qeutil/quantumespresso.py'...
***   File "./lib/python3.5/site-packages/qeutil/quantumespresso.py", line 215
    raise ValueError, "The specified calculation (%s) is not available for this calculator" % xc.lower()
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/qeutil/readers.py'...
***   File "./lib/python3.5/site-packages/qeutil/readers.py", line 207
    print _command_string
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/qeutil/writers.py'...
***   File "./lib/python3.5/site-packages/qeutil/writers.py", line 164
    print 'Impossible lattice symmetry! Contact the author!'
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/qeutil-0.1.16.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
